# pyfive

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  README.rst  basic_example.nc  environment.yml  make_sample_netcdf4_file.py  ppyhdf5.py  pyproject.toml  setup.cfg  setup.py  test_ppyhdf5.py
.github/workflows/: pytest.yml
bnl/: opening_speed.py  playing.py  playings3.py
pyfive/: __init__.py  as_dataobjects.py  btree.py  core.py  dataobjects.py  datatype_msg.py  h5d.py  h5py.py  h5t.py  high_level.py  indexing.py  low_level.py  misc_low_level.py
pyfive/tests/: attr_datatypes.hdf5  basic_example.hdf5  earliest.hdf5  group_example.hdf5  make_attr_datatypes_file.py  make_dataset_datatypes_file.py  make_earliest_file.py  make_netcdf4_classic_file.py  make_sample_file.py  make_sample_group_file.py  netcdf4_classic.nc  test_attr_datatypes.py  test_dataset_datatypes.py  test_dataset_multidim.py  test_group.py  test_latest.py  test_netcd4_classic.py  test_pyfive.py
tests/: attr_datatypes.hdf5  chunked.hdf5  compressed.hdf5  compressed_v1.hdf5  conftest.py  dataset_datatypes.hdf5  dataset_multidim.hdf5  dim_scales.hdf5  fillvalue_earliest.hdf5  fillvalue_latest.hdf5  filter_pipeline_v2.hdf5  fletcher32.hdf5  groups.hdf5  h5netcdf_test.hdf5  latest.hdf5  make_attr_datatypes_file.py  make_chunked.py  make_compressed.py  make_dim_scales.py  make_enum_file.py  make_fillvalue.py  make_filter_pipeline_v2.py  make_fletcher32.py  make_groups_file.py  make_latest_file.py  make_netcdf_unlimited.py  make_new_style_groups_file.py  make_references_file.py  make_resizable.py  netcdf4_classic.nc  netcdf4_empty_unlimited.nc  netcdf4_unlimited.nc  new_style_groups.hdf5  references.hdf5  resizable.hdf5  test_attr_datatypes.py  test_chunked.py  test_compressed.py  test_compressed_v1.py  test_dataset_datatypes.py  (+27 more)
tests/data/: enum_variable.hdf5  enums_from_netcdf.nc  issue23_A.nc  issue23_A_contiguous.nc  issue23_B.nc  make_dataset_multidim_file.py
