[bdist_wheel]
universal=1

[metadata]
name = pyfive
version = 0.4.0+h5nc
description = A pure python HDF5 reader
long_descriptino = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ncas-cms/pyfive
author = Jonathan J. Helmus
author_email = jjhelmus@gmail.com (with additions from Bryan Lawrence)
maintainer = Valeriu Predoi
maintainer_email = valeriu.predoi@ncas.ac.uk
license = BSD
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developer
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
packages = pyfive
python_requires >= 3.10
install_requires =
    moto
    numpy
    s3fs

[options.extras_require]
testing = 
    pytest
    h5py
    netCDF4
    h5netcdf

